# dummy-rep

./: .dockerignore  .env.example  .gitignore  DEMO_SCRIPT.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
input_bundles/: README.md
input_bundles/a11y_gap/: manifest.json  tickets.json
input_bundles/competitive_parity/: manifest.json  tickets.json
input_bundles/conflicting_stakeholders/: manifest.json  tickets.json
input_bundles/enterprise_complexity/: manifest.json  tickets.json
input_bundles/metric_drop/: manifest.json  tickets.json
input_bundles/perf_regression/: manifest.json  tickets.json
input_bundles/pricing_change/: manifest.json  tickets.json
input_bundles/privacy_risk/: manifest.json  tickets.json
input_bundles/sample_bundle/: manifest.json  tickets.json
input_bundles/tech_dependency/: manifest.json  tickets.json
output/2576ea64-acc2-456d-8d3c-6a7c49564eb8/: context_packet.json  run_manifest.json  token_usage.json
output/3a983204-8f45-4f95-8eed-646ce446fa7f/: context_packet.json  run_manifest.json  token_usage.json
output/65a3b73a-b26f-406f-b53c-96edf55128ab/: context_packet.json  run_manifest.json  token_usage.json
output/836bef65-42d0-4d5e-860f-1e96c9eb785d/: context_packet.json  run_manifest.json
output/c2a65790-9379-424e-a2c0-1eaa67893a29/: context_packet.json  run_manifest.json  token_usage.json
scripts/: demo.py  run_single.py
src/aipm/: api.py  (+2 more)
tests/: conftest.py  test_agents.py  test_backlog_generator.py  test_core.py  test_e2e.py  test_integration.py  test_outputs.py  test_schemas.py  test_validators.py
(+660 files in other folders)
